running down some layout issues

--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -14,3 +14,7 @@ footer {
         left: 260px;
     }
 }
+
+#thread {
+    margin-bottom: 175px;
+}
